--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -151,27 +151,37 @@ h2 span {
 input[type="text"]{
     padding: 10px;
     height: 50px;
-    width: 300px;
+    width: 100%;
     border-radius: 4px;
     background-color: var(--app-light-bg);
     box-shadow: 1px 1px 1px 0 rgba(0, 0, 0, 0.2) inset, -1px -1px 1px 0 rgba(255, 255, 255, 0.1) inset;
-    text-align: left;
+    text-align: center;
     color: #1a1d28;
     margin-bottom: 15px;
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: 18px;
 }
 
 .output{
-    padding: 10px 0;
+    width: 600px;
+    height: 100px;
     border-radius: 4px;
     background-color: rgba(255, 255, 255, 0.2);
     box-shadow: 1px 1px 1px 0 rgba(0, 0, 0, 0.2) inset, -1px -1px 1px 0 rgba(255, 255, 255, 0.1) inset;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     color: #fff;
 }
 
 .output p {
-    font-size: 20px;
+    font-weight: 600;
+    letter-spacing: 4px;
+    font-size: 42px;
+}
+
+.output p span {
+    color: var(--app-red);
 }
