--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -82,6 +82,18 @@ h1 span {
 /* ---------------------------------------------------- */
 /*        Game                                          */
 /* ---------------------------------------------------- */
+.win-result {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    visibility: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--app-dark-bg);
+}
 .game {
     display: flex;
     justify-content: center;
