--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -53,7 +53,7 @@ header {
     width: 75%;
     text-align: right;
 }
-.button {
+button {
     background-color: var(--app-green);
     border-radius: 4em;
     font-size: 16px;
@@ -82,6 +82,7 @@ h1 span {
 /* ---------------------------------------------------- */
 /*        Game                                          */
 /* ---------------------------------------------------- */
+
 .win-result {
     position: fixed;
     top: 0;
@@ -94,6 +95,10 @@ h1 span {
     align-items: center;
     background-color: var(--app-dark-bg);
 }
+.visible {
+    visibility: visible; 
+}
+
 .game {
     display: flex;
     justify-content: center;
