--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -50,6 +50,8 @@ header {
 }
 
 .btn-wrapper {
+    position: relative;
+    z-index: 1;
     width: 75%;
     text-align: right;
 }
@@ -83,21 +85,59 @@ h1 span {
 /*        Game                                          */
 /* ---------------------------------------------------- */
 
-.win-result {
+.hidden {
+    visibility: hidden;
+}
+
+.visibile {
+    visibility: visible;
+}
+
+.result-page {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    visibility: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: var(--app-dark-bg);
+    background-color: rgba(26, 29, 40, .5)
 }
-.visible {
-    visibility: visible; 
+
+.result-card {
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(54, 78, 230, .9);
+    height: 300px;
+    width: 300px;
+    border-radius: 10px;
 }
+
+.results {
+    width: 250px;
+}
+
+.results h2 {
+    text-transform: uppercase;
+}
+
+h3 span {
+    color: var(--app-red);
+}
+
+.results h3 {
+    color: #fff;
+    padding-bottom: 15px;
+    text-align: left;
+}
+.btn-result-wrapper{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 
 .game {
     display: flex;
@@ -113,7 +153,8 @@ h1 span {
     text-transform: uppercase;
     font-weight: 600;
     padding: 10px 40px;
-    border-radius: 4px  ;
+    border-radius: 4px;
+    display: inline;
 }
 
 h2 span {
