--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -252,6 +252,7 @@ input[type="text"]{
     font-weight: 600;
     letter-spacing: 4px;
     font-size: 42px;
+    user-select: none;
 }
 
 .output p span {
