--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -58,15 +58,22 @@ h1, h2, p {
 
 header {
     padding-top: 18px;
+    width: 100%;
 }
 
-.btn-wrapper {
+.play-again-wrapper{
+    width: 50%;
+    display: grid;
+    justify-content: right;
     position: relative;
     z-index: 1;
-    width: 75%;
-    text-align: right;
 }
-button {
+.btn-wrapper {
+  
+    width: 50%;
+}
+
+.play-again-btn {
     background-color: var(--app-green);
     border-radius: 4em;
     font-size: 16px;
@@ -79,7 +86,11 @@ button {
     cursor: pointer;
     transition-duration: 0.4s;
     -webkit-transition-duration: 0.4s;
-  }
+}
+
+.play-again-btn:hover {
+    background-color: #1f7d35;
+}
 
   .bounce {
     animation: bounce 2s ease infinite;
@@ -90,11 +101,11 @@ button {
       60% {transform: translateY(-15px);}
   }
 .title {
-    width: 25%;
+    width: 100%;
 }
 
 .title h1 {
-    font-size: 38px;
+    font-size: 100px;
 }
 
 h1 span {
@@ -130,9 +141,10 @@ h1 span {
     display: grid;
     align-items: center;
     justify-content: center;
-    background-color: #FF3CAC;
-    background-image: linear-gradient(225deg, #FF3CAC 0%, #784BA0 50%, #2B86C5 100%);
+    background-color: rgba(0, 0, 0, 0.6);
+    border: 1px solid var(--app-green);
     height: 400px;
+    box-shadow: 1px 1px 1px 0 rgba(0, 0, 0, 0.2) inset, -1px -1px 1px 0 rgba(255, 255, 255, 0.1) inset;
     width: 400px;
     border-radius: 10px;
 }
@@ -146,13 +158,17 @@ h1 span {
 }
 
 h3 span {
-    color: #fff;
+    color: var(--app-green);
 }
 
+.points{
+    font-size: 6em;
+    color: var(--app-green);
+}
 
 .results h3 {
     font-size: 29px;
-    color: var(--app-dark-bg);
+    color: var(--app-light-bg);
     padding-bottom: 15px;
     text-align: left;
 }
@@ -178,6 +194,10 @@ h3 span {
     padding: 2px 40px;
     border-radius: 4px;
     display: inline;
+}
+
+.start-btn:hover{
+    background-color: #d42e44;
 }
 
 h2 span {
@@ -268,6 +288,33 @@ input[type="text"]{
     user-select: none;
 }
 
+.error{
+    color: var(--app-red);
+}
+
 .output p span {
     color: var(--app-red);
 }
+
+.hide-car{
+    display: none;
+}
+
+.anim {
+    position: absolute;
+  -webkit-animation: linear infinite;
+  -webkit-animation-name: run;
+  -webkit-animation-duration: 128s;
+}
+
+@keyframes run {
+    0% {
+      left: 0;
+    }
+    50% {
+      left: 100%;
+    }
+    100% {
+      left: 0;    
+    }
+  }
