--- a/assets/style/reset.css
+++ b/assets/style/reset.css
@@ -29,7 +29,7 @@
 
 html {
   height: 100%;
-  font-family: 'Permanent Marker', cursive;  
+  font-family: 'Racing Sans One', cursive; 
   font-size: 100%;
   font-weight: 400;
   line-height: 1.5;
