--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -179,7 +179,7 @@ h3 span {
 
 .leaderboards{
     border: 3px solid var(--app-red);
-    padding: 10px 0;
+    padding: 10px;
     cursor: pointer;
     background-color: rgba(0, 0, 0, 0.6);
     height: 100vh;
@@ -187,7 +187,6 @@ h3 span {
     position: fixed;
     right: 0;
     top: 0;
-    /* width: 50%; */
 }
 
 table {
