--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -109,7 +109,7 @@ header {
 }
 
 h1 span {
-    color: var(--app-red)
+    color: var(--app-purple)
 }
 
 
@@ -176,7 +176,6 @@ h3 span {
 
 
 .leaderboards{
-    border: 3px solid var(--app-red);
     padding: 10px;
     cursor: pointer;
     background-color: rgba(0, 0, 0, 0.6);
@@ -225,7 +224,7 @@ li {
 
 li span {
     font-size: 1rem;
-    color: var(--app-red);
+    color: var(--app-orange);
 }
 
 .btn-result-wrapper{
